# SUM3API

./: .gitignore  Complete_System_Architecture.md  LICENSE  MQL5-Rustmt5-chart-Documentation.md  MQL5-ZMQ Library for SUM3API.md  README.md  README_0.md  Research Paper.md  Rust-ZMQ Library for SUM3API.md  Security_Claim_Validation.md  architecture-diagram.md  command.md  d.txt  draft.md  main.tex  references.bib  revise.md  test.md  tick-volume-logic.md  trading-architecture-diagram.md  trading-architecture-v5.md
Discovery/: summary.md
Discovery/MQL5/Experts/: ZmqPublisher.mq5
Discovery/mt5-chart/: Cargo.toml
Discovery/search/: scholar.md  search.txt
Dump/: trading-architecture-v5.md
Dump/Discovery/: README.md
Dump/Paper/: main_1.tex
Dump/Paper/p1/: references_1.bib
Dump/Paper/p2/: main.tex  references.bib
Dump/Paper/p3/: main.tex  references.bib
Dump/Paper/p4/: references.bib
Dump/Paper/p5/: Complete_System_Architecture.md  MQL5-ZMQ Library for SUM3API.md  main.tex  references.bib
Dump/System/: MQL5-ZMQ Library for SUM3API.md  trading-architecture-v3.md  trading-architecture-v4.md
MQL5/Experts/: ZmqPublisher.mq5
MQL5/Include/Zmq/: Zmq.mqh
Researh Paper/: main.tex
Rustmt5-chart/: Cargo.toml
Rustmt5-chart/output/: History_XAUUSDc_H1_OHLC_ID0002_20260126_135823.csv  Live_XAUUSDc_ID0001_20260126_135811.csv
Rustmt5-chart/src/: main.rs
main/: main.tex  references.bib
mt5-chart/: Live_BTCUSDc_20260126_121118.csv
mt5-chart/output/: History_XAUUSDc_H1_TICKS_ID0001_20260126_140825.csv
mt5-chart/src/: main.rs
(+1 files in other folders)
