[package]
name = "mt5-chart"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = "0.27.1"
egui = "0.27.1"
egui_plot = "0.27.1"
zeromq = "0.5.0-pre"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
tokio = { version = "1.36.0", features = ["full"] }
futures = "0.3.30"
